Add opportunities docs
